fix media align in channel page

--- a/public/css/channel.css
+++ b/public/css/channel.css
@@ -62,6 +62,7 @@ a:hover, a:focus  {
   
 .media {
   cursor: pointer;
+  vertical-align: middle;
 }
 
 .media_photo, .media_video{
